--- a/_posts/2020-06-17-blog.md
+++ b/_posts/2020-06-17-blog.md
@@ -57,7 +57,7 @@ title:  "XX"
 - ```#``` 用来表示标题，1-6个，越少标题越大
 - ```**```斜体
 - ```****```加粗
-- ```中间包含代码块
+- \`\`\`\`\`\`中间包含代码块
 
 如果需要插入图片，将图片放/assets/img文件夹下，通过```![描述名](/assets/img/图片名)```来引用。
 
