--- a/_posts/2020-05-06-light.md
+++ b/_posts/2020-05-06-light.md
@@ -7,6 +7,10 @@ title:  "光线追迹"
 
 Python可以做很多事情，比如进行光学追迹的简单计算。这是一个课程的小实验作业。
 
+## 题目
+
+运用光线追迹公式，对d，F，C光绘制出球差曲线。
+
 ## 编译环境
 
 使用 Anaconda 的Python3.7.6解释器。需要额外安装包：sympy，matploylib。
