--- a/_posts/2020-06-18-sigpro.md
+++ b/_posts/2020-06-18-sigpro.md
@@ -73,26 +73,31 @@ $$
 import numpy as np
 from scipy import signal
 import matplotlib.pyplot as plt
-w = [100, 105]      #频率
-a = [10, 5, 3]      #幅值
-ph = [0, 1.4, 0.73] #相位
-N=1000
+w = [100, 105]  #频率
+a = [10, 5, 3]  #幅值
+ph = [0, 1.4, 0.73]  #相位
+N = 1000
+
+
 #初始信号
 def xtsig(t):
-    return a[0] * np.sin(2*np.pi*w[0] * t + ph[0])
+    return a[0] * np.sin(2 * np.pi * w[0] * t + ph[0])
+
+
 #回波
 def ytsig(t):
-    return (a[1] * np.cos(2 * np.pi * w[0] * t + ph[1]) 
-    + a[2] * np.cos(2 * np.pi * w[1] * t + ph[2]))
+    return (a[1] * np.cos(2 * np.pi * w[0] * t + ph[1]) +
+            a[2] * np.cos(2 * np.pi * w[1] * t + ph[2]))
+
 
 def mul(t):
-    return ytsig(t)*xtsig(t)
+    return ytsig(t) * xtsig(t)
 
 
 time = np.linspace(0, 1, N)
 
-mulxy =mul(time)
-x=xtsig(time)
+mulxy = mul(time)
+x = xtsig(time)
 #滤波
 b, a = signal.butter(8, 0.02, 'lowpass')
 low = signal.filtfilt(b, a, mulxy)
@@ -101,22 +106,22 @@ ave = np.average(low)
 low = low - ave
 
 f1 = np.fft.fft(mulxy)
-absf1 = np.abs(f1)/N
+absf1 = np.abs(f1) / N
 
 f2 = np.fft.fft(x)
-absf2=np.abs(f2)/N
+absf2 = np.abs(f2) / N
 
 f3 = np.fft.fft(low)
 absf3 = np.abs(f3) / N
 
 plt.subplot(211)
-p1, =plt.plot(np.arange(N),absf1,color='r')
+p1, = plt.plot(np.arange(N), absf1, color='r')
 p2, = plt.plot(np.arange(N), absf2, color='g')
 p3, = plt.plot(np.arange(N), absf3, color='b')
 
 plt.subplot(212)
 p4, = plt.plot(time, low)
-p5,=plt.plot(time,x,color ='r')
+p5, = plt.plot(time, x, color='r')
 plt.show()
 
 ```
