--- a/_posts/2020-06-18-sigpro.md
+++ b/_posts/2020-06-18-sigpro.md
@@ -14,7 +14,8 @@ title:  "简单信号处理"
 ## 流程图
 
 基本设计思路如下
-![流程图](../assets/img/sig1.png)
+
+![流程图](/assets/img/sig1.png)
 
 这个设计的基本思路是借鉴了双边带抑制载波调制的思路。借鉴自乘和滤波，获得低频的多普勒偏移频率。
 
