--- a/_posts/2020-06-21-vsc1.md
+++ b/_posts/2020-06-21-vsc1.md
@@ -3,7 +3,7 @@ layout: default
 title:  "VS Code，All in One（1）"
 ---
 
-# VS Code以及其他的安利向（1）
+# VS Code以及其他的安利向（1）-VS Code编辑器本身
 
 ## 关于这个系列
 
@@ -42,7 +42,9 @@ VS Code 是微软开源出来的一款代码编辑器。在此基础上再加上
 
 ### 中文支持
 
-在拓展市场中搜索Chinese (Simplified) Language Pack for Visual Studio Code就能找到官方的汉化插件。按照指示安装就能配置好中文支持
+在拓展市场中搜索Chinese (Simplified) Language Pack for Visual Studio Code就能找到官方的汉化插件。按照指示安装就能配置好中文支持。
+
+**注意：该中文是不一定保证完全覆盖的。很多时候还是会接触到英文界面**
 
 ### 文件编码
 
@@ -54,6 +56,10 @@ VS Code 是微软开源出来的一款代码编辑器。在此基础上再加上
 ### 设置同步
 
 左下角的头像就是设置同步账号，按提示操作就能同步自己的VS Code 配置。可以选择使用微软账户（一般安装win10系统，上云端的就是微软账户）或者是Github账户同步。
+
+### ctrl+shift+p
+
+VS Code的通用顶部功能搜索框。可以依靠这一功能，快速搜索需要的操作而不用背诵快捷键
 
 ### Draw.io Integration
 
