--- a/_posts/2020-06-21-vsc1.md
+++ b/_posts/2020-06-21-vsc1.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  "VS Code，All in One（1）"
+title:  "VS Code，All in One（1）——v0.1.2"
 ---
 
 # VS Code以及其他的安利向（1）-VS Code编辑器本身
