--- a/_posts/2020-06-22-vsc2.md
+++ b/_posts/2020-06-22-vsc2.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  "VS Code，All in One（2）"
+title:  "VS Code，All in One（2）——v0.1.0"
 ---
 
 # VS Code以及其他的安利向（2）-markdown
