--- a/_posts/2020-06-22-vsc2.md
+++ b/_posts/2020-06-22-vsc2.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  "VS Code，All in One（2）——v0.1.0"
+title:  "VS Code，All in One（2）——v0.1.1"
 ---
 
 # VS Code以及其他的安利向（2）-markdown
@@ -58,9 +58,34 @@ VS Code 下写markdown，最基本的只需要安装插件[Markdown All in One](
 - \-无序列表
 - \$ \$：行内latex公式
 - \$\$  \$\$：行间latex公式
+- \>：引用块
 - \`\`\`语言名 \`\`\`：插入代码块，语言名是可选的，可以针对特定语言进行语法高亮
 - \|：表格功能
 
 下面是一个markdown语法的示例，比较完整的示例各个基础语法，出自本人之前的博客文章
 
 ![示例](/assets/img/vscmd1.jpg)
+
+其实对于markdown入门，只需要记住\#是表示标题的前驱就行。1个\#就是一级标题，2个\#就是二级标题，以此类推到六级标题。然后\$就像Latex一样可以输入公式。这样的markdown已经能胜任很多小文章的编写工作了。
+
+## 导出
+
+虽然markdown简单，轻量，接受度越来越广，但不是所有人都之前接触过markdown或者是有软件打开md格式文件。下面是导出“通用”格式的教程。
+
+### html
+
+ctrl+shift+p 打开顶部搜索框，输入markdown all in one 就能找到打印当前文档为html格式文件的选项。这个格式就已经可以发给移动端或pc端的他人了。html文件就是网页文件，任何浏览器都能打开。
+
+如果再本地用浏览器打开，就可以右键，使用浏览器自带的打印成pdf文件的功能。
+
+### [Typora](https://typora.io/)
+
+就如之前所说，md已经得到广泛的应用，相应的市面上有很多专门的markdown编辑器（VS Code 是通用的文本编辑器），Typora是其中一种。Typora有导出为pdf，docx等各种常见格式的功能。Typora还有各种markdown的主题，可以选择别的主题导出。
+
+### [pandoc](https://pandoc.org/)
+
+通用的命令行格式转换工具。（笔者也不是很会用
+
+```powershell
+pandoc demo.md -o demo.pdf
+```
