--- a/_posts/2020-06-21-vsc1.md
+++ b/_posts/2020-06-21-vsc1.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  "VS Code，All in One（1）——v0.1.2"
+title:  "VS Code，All in One（1）——v0.1.3"
 ---
 
 # VS Code以及其他的安利向（1）-VS Code编辑器本身
@@ -11,7 +11,11 @@ title:  "VS Code，All in One（1）——v0.1.2"
 
 正好VS Code就是笔者一直以来的各个工作的共同平台，All in One 正是取其“全能”的含义。是有这个系列文章。
 
-这是一个安利+教程向的文章。限于笔者水平（和懒惰），肯定会有一些谬误或者是不全面的地方。按照笔者的经验，遇到的绝大多数问题，是可以当即依靠搜索引擎解决的。（当然，如果您希望笔者加上去，也欢迎私下联系我更新文章
+这是一个安利+教程向的文章。限于笔者水平（和懒惰），肯定会有一些谬误或者是不全面的地方。而且笔者也只有win10平台经验。按照笔者的经验，遇到的绝大多数问题，是可以当即依靠**搜索引擎**解决的。（当然，如果您希望笔者加上去，也欢迎私下联系我更新文章。
+
+学习这些应用性技能的宗旨
+
+## 搜索引擎是最好的老师，不会的需求，直接去查询，学好
 
 ## 何为VS Code
 
@@ -23,6 +27,7 @@ VS Code 是微软开源出来的一款代码编辑器。在此基础上再加上
 2. 微软大厂更新勤快，新功能上线多，官方就有很多插件支持。而且现在已经支持用微软账户或GitHub
 账户同步设置。
 3. 目前VS Code市场份额大，而且还在上升趋势。插件开发多，教程多。
+4. 开源免费软件，不怕封锁。这个系列之后介绍的也主要是开源方案，适合于跨平台和对抗科技封锁。
 
 关于代码编辑器的好处，这一点可能对应缺乏编程等经验（虽然笔者自己也没多少经验）的读者来说，很不直观。但相信随着本教程继续，读者们应该能体会到VS Code 下工作的便利和强大之处。
 
