--- a/_posts/2020-06-21-vsc1.md
+++ b/_posts/2020-06-21-vsc1.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  "VS Code，All in One（1）——v0.1.3"
+title:  "VS Code，All in One（1）——v0.2.0"
 ---
 
 # VS Code以及其他的安利向（1）-VS Code编辑器本身
@@ -15,13 +15,41 @@ title:  "VS Code，All in One（1）——v0.1.3"
 
 学习这些应用性技能的宗旨
 
-## 搜索引擎是最好的老师，不会的需求，直接去查询，学好
+**搜索引擎是最好的老师**
 
-## 何为VS Code
+## 什么是VS Code
 
 VS Code 是微软开源出来的一款代码编辑器。在此基础上再加上一些微软自己的服务，就是现在的VS Code 软件。VS Code可以很容易的从[官网上下载](https://code.visualstudio.com/Download)，[Insiders版本](https://code.visualstudio.com/insiders/)（预览版本，更新更快，新功能上线早，可能不稳定）。
 
-## 为何选择VS Code
+## 什么是代码编辑器
+
+代码编辑器，顾名思义，就是编辑代码文件的。但是问题来了，这些文件究竟是什么，为什么笔者在这里推荐代码编辑器，不是别的软件？
+
+### 代码文档 vs .docx
+
+读者应该都接触过txt格式的文件。上过大学，学过一些计算机方面的基础课的同学，可能还会接触.c,.cpp,.py,.md,.tex等等格式的文件。这些文件看起来拓展名千差万别，但是读者可以做一个实验。文件里面写上“123456789”，文件的大小都是9B。而若是在一个docx文档里面，文档大小是11.8 KB。这个简单的对比就反映出，本质上，之前说的各个格式，都是某种意义上的纯文本文档，拓展名只是标识这个文件是什么类型的，需要什么样的编译器/解释器。而docx，如果用压缩软件打开，其实是一系列的xml文件，word软件对这一系列的文件，掩盖了在文本文档层面的工作，而展现出一个整体的效果。
+
+![docx](/assets/img/vscset2.jpg)
+
+从这点出发，我们就可以用同一个代码编辑器，处理不同的代码文档，毕竟ta们本质都是文本文档。
+
+### 代码编辑器 vs 记事本
+
+既然说到文本文档，大家第一反应一般都是记事本。记事本当然是可以写代码文件的，毕竟记事本是可以处理txt这样的文本文档的。如果不信，可以看下面的对比图。左边为VS Code，右边是记事本，文件是笔者之前光线追迹里面提到的.py文件。
+
+![txt](/assets/img/vscset3.jpg)
+
+但这么一对比，直观上看，记事本毕竟没有专门的设计。相比较正牌的代码编辑器，ta缺少比如自动补全，代码语法高亮等等好用的功能。最多说能用，但是很不趁手。
+
+### 代码编辑器 vs 集成开发环境
+
+集成开发环境（IDE，下文也会这样简称）顾名思义，就是集成了大量的辅助功能，针对性的开发软件。例如学c/cpp读者可能接触过的Visual Studio，Dev-C++，学python读者接触过的PyCharm，都是所谓的IDE。
+
+与代码编辑器孰优孰劣其实是个延续已久的话题。一般来说，毕竟IDE集成了大量的辅助功能，在实际生产环境中，比起代码编辑器，还是更胜一筹（比如笔者虽然选择在VS Code里面写cpp，但复杂调试的工作还是在VS 2019里面进行）。而正由于这样的强大的功能，IDE一般来说，体积巨大，加载也比代码编辑器慢。而且，一般来说，IDE针对少数几种语言设计，如果自己需要的不止一种，可能还有切换的麻烦。
+
+相比而言，通过插件的帮助，代码编辑器可以适配绝大多数语言。而更小的体积，更精简的功能让代码编辑器加载更快，更轻量。而对一些要求不高的项目/任务，代码编辑器也能胜任，这样就不需要安装/加载体积巨大的IDE。
+
+### 为何选择VS Code
 
 1. 作为代码编辑器，安装插件后，就能适应很多编程语言和琐碎应用场景。
 2. 微软大厂更新勤快，新功能上线多，官方就有很多插件支持。而且现在已经支持用微软账户或GitHub
@@ -29,7 +57,7 @@ VS Code 是微软开源出来的一款代码编辑器。在此基础上再加上
 3. 目前VS Code市场份额大，而且还在上升趋势。插件开发多，教程多。
 4. 开源免费软件，不怕封锁。这个系列之后介绍的也主要是开源方案，适合于跨平台和对抗科技封锁。
 
-关于代码编辑器的好处，这一点可能对应缺乏编程等经验（虽然笔者自己也没多少经验）的读者来说，很不直观。但相信随着本教程继续，读者们应该能体会到VS Code 下工作的便利和强大之处。
+**本质上来说，笔者希望这个系列的教程，提供基于VS Code的，大量工作流程/场景的“一站式解决方案”。**
 
 ## 安装
 
