--- a/_posts/2020-06-22-vsc2.md
+++ b/_posts/2020-06-22-vsc2.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  "VS Code，All in One（2）——v0.1.1"
+title:  "VS Code，All in One（2）——v0.2.0"
 ---
 
 # VS Code以及其他的安利向（2）-markdown
@@ -46,21 +46,67 @@ VS Code 下写markdown，最基本的只需要安装插件[Markdown All in One](
 
 ## 语法
 
-下面写出的只是一部分语法。
+### 当我们在谈论文章的时候我们在谈论什么
 
-- \#：标题，1-6个，越多\#标题越小
-- \* \*：中间包括的为斜体
-- \*\* \*\*：中间包括为粗体
-- \*\*\* \*\*\*：中间包括为粗斜体
-- \!\[题目\]\(路径\)：插入图片
-- \[字符\]\(路径\)：插入链接
-- 1\. 有序列表
-- \-无序列表
-- \$ \$：行内latex公式
-- \$\$  \$\$：行间latex公式
-- \>：引用块
-- \`\`\`语言名 \`\`\`：插入代码块，语言名是可选的，可以针对特定语言进行语法高亮
-- \|：表格功能
+在介绍markdown语法之前，需要先思考一个问题，一篇文章是什么，需要大概什么部分。
+
+文章首先需要**标题**，文章的大标题，分节的标题。文章里面一些句子/段落需要**加粗**或者是**斜体**。文章很多时候需要列表，**有序无序列表**作为顺序结构。一篇文章可能需要插入，**图片**，**表格**，**链接**，**数学公式**这些辅助所里，有时候还需要插入**代码块**。还有，markdown支持一个**引言**功能。
+
+下面一个个看这些语法：
+
+### 标题
+
+\#用来表示标题，越多标题层次越小。
+
+```markdown
+   # 一级标题
+   ## 二级标题
+```
+
+### 加粗，斜体
+
+用\*括起文本实现
+
+```markdown
+   *斜体*
+   **加粗**
+   ***倾斜加粗***
+```
+
+### 图片，链接，数学公式，代码块
+
+```markdown
+    ![图片名](图片地址)
+    [链接名](链接地址)
+    $行内公式$
+
+    $$
+    行间公式
+    $$
+
+    ```语言名字
+        代码片段
+    ```
+```
+
+\|：表格功能，这个比较复杂，这里不详细说明。
+
+### 列表
+
+```markdown
+1. 有序列表
+2. 有序列表
+- 无序列表
+- 无序列表
+```
+
+### 引用
+
+```markdown
+    >引文
+```
+  
+### 示例
 
 下面是一个markdown语法的示例，比较完整的示例各个基础语法，出自本人之前的博客文章
 
