--- a/_posts/2020-06-23-vsc3.md
+++ b/_posts/2020-06-23-vsc3.md
@@ -190,7 +190,7 @@ Latex里面使用```\begin{}\end{}```来给出环境。
 %注意这里面用到了公式环境，对齐，上下标，分号，根号，大括号
  \begin{equation}%公式环境
     \left\{
-    %大括号
+    %大括号~
     \begin{aligned}%对齐
          & \mu_L=\frac{e}{2m}P_L=\frac{e}{2m}\sqrt{L(L+1)}\frac{h}{2\pi} \\
          & \mu_s=\frac{e}{m}P_s=\frac{e}{m}\sqrt{S(S+1)}\frac{h}{2\pi}   \\
