--- a/_posts/2020-06-21-vsc1.md
+++ b/_posts/2020-06-21-vsc1.md
@@ -2,8 +2,27 @@
 layout: default
 title:  "VS Code，All in One（1）——v0.2.0"
 ---
+- [VS Code以及其他的安利向（1) -编辑器](#vs-code以及其他的安利向1--编辑器)
+  - [关于这个系列](#关于这个系列)
+  - [什么是VS Code](#什么是vs-code)
+  - [什么是代码编辑器](#什么是代码编辑器)
+    - [代码文档 vs .docx](#代码文档-vs-docx)
+    - [代码编辑器 vs 记事本](#代码编辑器-vs-记事本)
+    - [代码编辑器 vs 集成开发环境](#代码编辑器-vs-集成开发环境)
+    - [为何选择VS Code](#为何选择vs-code)
+  - [安装](#安装)
+  - [字体和美化](#字体和美化)
+  - [杂项](#杂项)
+    - [中文支持](#中文支持)
+    - [文件编码](#文件编码)
+    - [设置同步](#设置同步)
+    - [ctrl+shift+p](#ctrlshiftp)
+    - [Draw.io Integration](#drawio-integration)
+    - [Binary](#binary)
+    - [Gitlens](#gitlens)
+    - [VSC Netease Music](#vsc-netease-music)
 
-# VS Code以及其他的安利向（1）-VS Code编辑器本身
+# VS Code以及其他的安利向（1) -编辑器
 
 ## 关于这个系列
 
