--- a/_posts/2020-06-22-vsc2.md
+++ b/_posts/2020-06-22-vsc2.md
@@ -2,6 +2,23 @@
 layout: default
 title:  "VS Code，All in One（2）——v0.2.0"
 ---
+- [VS Code以及其他的安利向（2）-markdown](#vs-code以及其他的安利向2-markdown)
+  - [何为markdown](#何为markdown)
+  - [环境](#环境)
+    - [Word Count CJK](#word-count-cjk)
+    - [Docs Authoring Pack](#docs-authoring-pack)
+  - [语法](#语法)
+    - [当我们在谈论文章的时候我们在谈论什么](#当我们在谈论文章的时候我们在谈论什么)
+    - [标题](#标题)
+    - [加粗，斜体](#加粗斜体)
+    - [图片，链接，数学公式，代码块](#图片链接数学公式代码块)
+    - [列表](#列表)
+    - [引用](#引用)
+    - [示例](#示例)
+  - [导出](#导出)
+    - [html](#html)
+    - [Typora](#typora)
+    - [pandoc](#pandoc)
 
 # VS Code以及其他的安利向（2）-markdown
 
