--- a/_posts/2020-06-23-vsc3.md
+++ b/_posts/2020-06-23-vsc3.md
@@ -2,7 +2,20 @@
 layout: default
 title:  "VS Code，All in One（3）——v0.1.2"
 ---
-
+- [VS Code以及其他的安利向（3）-LaTex](#vs-code以及其他的安利向3-latex)
+  - [何为LaTex](#何为latex)
+  - [安装LaTex发行版](#安装latex发行版)
+  - [配置VS Code](#配置vs-code)
+  - [LaTex数学公式相关a语法](#latex数学公式相关a语法)
+    - [基本符号](#基本符号)
+    - [数学公式环境](#数学公式环境)
+    - [公式对齐](#公式对齐)
+    - [数学公式范例](#数学公式范例)
+  - [LaTex文章模板](#latex文章模板)
+  - [表格](#表格)
+  - [内部引用](#内部引用)
+  - [bibTex](#bibtex)
+  
 # VS Code以及其他的安利向（3）-LaTex
 
 LaTex本身有一定的复杂性和学习门槛。在本文中，笔者尝试走一条特殊的思路写这个教程。这也是笔者自己学会LaTex的道路。但这条道路是不能覆盖LaTex的方方面面（笔者自己也没学会）。所以实在遇到问题，除了联系笔者增补教程，还可以求助搜索引擎。再次复习一下这个系列文章的宗旨：
