--- a/note/2020-06-30-ao31.md
+++ b/note/2020-06-30-ao31.md
@@ -23,4 +23,12 @@ title:  "ao3及其他"
 
 ## “法外之地”
 
-互联网
+一个互联网服务/平台，特别是一个带社交功能的互联网服务/平台，潜在力量是很大的。从危害大到小
+
+1. 平台直接封禁对立方账户
+2. 平台针对性的筛选，控制，删除对立方的言论
+3. 平台降低对立方言论的搜索权重和推荐
+4. 平台对言论立场中立，但是收集大数据分析舆情
+
+一个他人掌控的社交平台，对己方就是一个不定时的炸弹。这样国家在数字领域被打压，和在实际领域上一样危害巨大。现在的国际秩序下，跨国执法服务器是几乎不可能的事，也不能跨国控制平台运营行为。数字主权也是主权。为什么“法外之地”是如此敏感的事情，归根于此。
+
