--- a/note/try.org
+++ b/note/try.org
@@ -2,8 +2,23 @@
 
 
 
-** TODO emacs learn [0%]  
+** TODO emacs learn [1/4] [25%]  
 - [ ] tutorial
-- [ ] evil
+- [X] watch video on emacs org mode
 - [ ] watch video emacs rock
 - [ ] org mode learn
+
+
+
+* org toturial
+** seco 
+*** scrolling
+**** four
+| 11      | 22 | 11 |
+|         |    |    |
+
+** TODO this isa task
+.
+#+begin_src python
+print('hello world')
+#+end_src
