--- a/_posts/2020-06-22-vsc2.md
+++ b/_posts/2020-06-22-vsc2.md
@@ -35,7 +35,7 @@ markdown（有时候简称md）是一个轻量的标记语言。和word不一样
 
 ## 环境
 
-VS Code 下写markdown，最基本的只需要安装插件[Markdown All in One](https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one)。这个插件可以提供最基本的侧边预览（在文件左上角），以及打印成html格式文件（ctrl+shift+p，打印到html）的功能。
+VS Code 下写markdown，最基本的只需要安装插件[Markdown All in One](https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one)。这个插件可以提供最基本的侧边预览（在文件右上角），以及打印成html格式文件（ctrl+shift+p，打印到html）的功能。
 
 ### [Word Count CJK](https://marketplace.visualstudio.com/items?itemName=holmescn.vscode-wordcount-cjk)
 
