修订用户代码片段和小细节

--- a/_posts/2020-06-22-vsc2.md
+++ b/_posts/2020-06-22-vsc2.md
@@ -5,6 +5,7 @@ title:  "VS Code，All in One（2）——v0.2.0"
 - [VS Code以及其他的安利向（2）-markdown](#vs-code以及其他的安利向2-markdown)
   - [何为markdown](#何为markdown)
   - [环境](#环境)
+    - [Markdown All in One](#markdown-all-in-one)
     - [Word Count CJK](#word-count-cjk)
     - [Docs Authoring Pack](#docs-authoring-pack)
   - [语法](#语法)
@@ -34,6 +35,8 @@ markdown（有时候简称md）是一个轻量的标记语言。和word不一样
 6. 可以拓展支持Latex公式
 
 ## 环境
+
+### [Markdown All in One](https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one)
 
 VS Code 下写markdown，最基本的只需要安装插件[Markdown All in One](https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one)。这个插件可以提供最基本的侧边预览（在文件右上角），以及打印成html格式文件（ctrl+shift+p，打印到html）的功能。
 
