--- a/_posts/2020-06-18-sigpro.md
+++ b/_posts/2020-06-18-sigpro.md
@@ -24,7 +24,9 @@ title:  "简单信号处理"
 为了简化推导，接收的信号的时延，可以划归到相位变化中。即
 
 $$
-y(t)=B\cos(\omega_0t+\phi_1)+D\cos((\omega_0+\omega_d)t+\phi_2)\tag{1}
+\begin{aligned}
+ y(t)=B\cos(\omega_0t+\phi_1)+D\cos((\omega_0+\omega_d)t+\phi_2)\tag{1}   
+\end{aligned}
 $$
 
 将信号和原始信号导入乘法器，得到
