--- a/_posts/2022-01-20-prince.md
+++ b/_posts/2022-01-20-prince.md
@@ -47,9 +47,9 @@ title: "王子游戏以及该游戏的不平衡性"
 
 因此只有靠运气选组，也就是最后运气成分选到公主。
 
-![情形1](../assets/img/2022-01-20-1.png)
+![情形1](/assets/img/2022-01-20-1.png)
 
-![情形2](../assets/img/2022-01-20-2.png)
+![情形2](/assets/img/2022-01-20-2.png)
 
 ## 运气成分
 
