--- a/_posts/2022-01-20-prince.md
+++ b/_posts/2022-01-20-prince.md
@@ -3,6 +3,12 @@ layout: default
 title: "王子游戏以及该游戏的不平衡性"
 ---
 
+- [王子游戏以及该游戏的不平衡性](#王子游戏以及该游戏的不平衡性)
+    - [规则](#规则)
+    - [理想条件](#理想条件)
+    - [均衡的策略](#均衡的策略)
+    - [运气成分](#运气成分)
+
 # 王子游戏以及该游戏的不平衡性
 
 ## 规则
