时间线改变
action 配置

branch 名字

格式化

ready to deploy

rename

re

大修：assert，act

rebuild public

re act

publish change

re act

--- a/content/post/2020-08-08-touko.md
+++ b/content/post/2020-08-08-touko.md
@@ -8,12 +8,12 @@ tags : [
 ]
 ---
 
-1. [杂谈/胡说 浅析七海灯子对喜欢的观念](#杂谈胡说-浅析七海灯子对喜欢的观念)
-   1. [声明](#声明)
-   2. [绝对的爱（？](#绝对的爱)
-   3. [灯子的观念](#灯子的观念)
-   4. [作品发展后的观念](#作品发展后的观念)
-   5. [后话](#后话)
+- [杂谈/胡说 浅析七海灯子对喜欢的观念](#杂谈胡说-浅析七海灯子对喜欢的观念)
+  - [声明](#声明)
+  - [绝对的爱（？](#绝对的爱)
+  - [灯子的观念](#灯子的观念)
+  - [作品发展后的观念](#作品发展后的观念)
+  - [后话](#后话)
 
 # 杂谈/胡说 浅析七海灯子对喜欢的观念
 
