斜体样式修改

--- a/content/post/2020-06-22-vsc2.md
+++ b/content/post/2020-06-22-vsc2.md
@@ -73,9 +73,9 @@ VS Code 下写 markdown，最基本的只需要安装插件[Markdown All in One]
 用\*括起文本实现
 
 ```markdown
-_斜体_
+*斜体*
 **加粗**
-**_倾斜加粗_**
+***倾斜加粗***
 ```
 
 ### 图片，链接，数学公式，代码块
