--- a/content/post/2020-08-08-touko.md
+++ b/content/post/2020-08-08-touko.md
@@ -22,7 +22,7 @@ isCJKLanguage: true
 
 这个问题可能比较奇怪，比较难回答。回答可能也比较个人化，比较见仁见智。那么，不妨换一个更清晰的问题：
 
-是否 **_应当_** 有绝对的爱？
+是否 ***应当*** 有绝对的爱？
 
 这个问题简单多了。爱情确实重要，但人不止要考虑爱，还要考虑国家，社会，亲情友情（暂时将爱限定于爱情）。那么，最极端的情况下，如果爱人杀人放火吸毒出轨等等无恶不作，从基本的社会道德出发，都不应‘该继续爱 ta。或者换个不是那么极端的例子，职业道德要求，老师和学生是不应该谈恋爱的（这个主要是考虑老师拥有隐含的优势地位，而且潜在的对其他学生不公平）。那么，喜欢其实是有条件性的。
 
