--- a/content/post/2022-01-20-prince.md
+++ b/content/post/2022-01-20-prince.md
@@ -28,7 +28,7 @@ isCJKLanguage: true
 - 可以无限次问问题
 - 一个已知明牌的假话哥
 
-注意其中的可以无限次问问题的条件。该条件下，每个人对局面看法都是已知的，而且真话哥没有别的选择，**_唯一的变化来自于假话哥和胡话哥的配合_**。如果假话哥和胡话哥之间配合，能保证了两边局面完全对称，两边胜率完全平分，可以认为这样的策略是两边都能接受的策略。
+注意其中的可以无限次问问题的条件。该条件下，每个人对局面看法都是已知的，而且真话哥没有别的选择，***唯一的变化来自于假话哥和胡话哥的配合***。如果假话哥和胡话哥之间配合，能保证了两边局面完全对称，两边胜率完全平分，可以认为这样的策略是两边都能接受的策略。
 
 ## 均衡的策略
 
