--- a/content/post/2022-11-02-MBQueue.md
+++ b/content/post/2022-11-02-MBQueue.md
@@ -22,7 +22,7 @@ Michael&Scott [^1] 给出了了一个无锁队列的实现。在我实际用 Jav
 ...
 if (next.getReference() == null) {
     if(next.getReference() != null){
-        System.err.println("bad things happe!!!");
+        System.err.println("bad things happen!!!");
     }
 
     if (next.compareAndSet(null,
