高级算法 cspA的证明优化

--- a/content/post/2022-08-31-ddia.md
+++ b/content/post/2022-08-31-ddia.md
@@ -95,3 +95,14 @@ isCJKLanguage: true
     - 写时必须包含之前读的 version 号，并手动 merge 读到的结果
     - 可以覆盖低 version 号的结果，高版本不动
     - 注意，删除需要特殊的 remove 标记（简单移除会被误认为未更新）
+
+### partition
+
+- $hash\mod N$，但是丧失顺序
+  - 不能避免攻击/单 key 高流量
+  - 单 key 加盐
+  - 对比 node 数目，多建分区防止 mod 抖动
+- service discovery：找到划分所在 node
+  1. 随机找一个节点，节点之间协调
+  2. 路由表连接到节点
+  3. 客户端知道划分，自己找到对应节点
