--- a/content/post/2023-02-27-adalg.md
+++ b/content/post/2023-02-27-adalg.md
@@ -741,7 +741,7 @@ x1-A-e-B-x2
 - 矩阵的迹(对角线元素求和)
   - $trace(A)=\sum A_{ee}$(自环),$trace(ABC)=\sum A_{e_1e_2}B_{e_2e_3}C_{e_3e_1}$
 - 张量积，(克罗内克积)对于矩阵$M_{dd},N_{dd}$，结果为$d^2\times d^2$的矩阵，$M\otimes N=(m_{ij}N)$
-  -  $(M\otimes N)\_{x_1x_2,x_3x_4}=M_{x_1x_3}N_{x_2x_4}$ 。结果中行标$x_1x_2$可以视为把$M$的行标$x_1$和$N$的行标$x_2$字符串组合在一起
+  - $(M\otimes N)\_{x_1x_2,x_3x_4}=M_{x_1x_3}N_{x_2x_4}$ 。结果中行标$x_1x_2$可以视为把$M$的行标$x_1$和$N$的行标$x_2$字符串组合在一起
   - 可以表示为`x1-M-x3, x2-N-x4`的张量网络（没有内部边，无需求和，顶点函数就是矩阵的 index）
 - 张量网络值满足**结合律**
 - 有限域上的线性方程组解集大小，等于对应张量网络值
@@ -795,23 +795,25 @@ $$
 \sum \mathcal{X}_{(AX=C)}\cdot i^{P(x_1,...x_n)}=\sum i^{Q(x_1,...x_r)}
 $$
 
-接下来进行逐步消除自变量。考虑$x_1$。如果$x_1$的一次项系数是偶数，分解$Q(x_1,...x_r)=2x_1R(x_2,...x_r)+S(x_2,...x_r)+\alpha_1x^2_1$。容易知道，当中$S()$仍然满足之前$P()$的要求，而$R(x_2,...x_r)$是一个次数为 1 的多项式
+接下来进行逐步消除自变量。考虑$x_1$。注意到，$x_i$都是 bool 变量，因此必然有$x_i^2\equiv x_i$，我们可以把关于$x_1$的二次项$\alpha_1x_1^2$（如果存在的话）改写成$\alpha_1x_1$融合进关于$x_1$的一次项当中。
+
+对$x_1$的一次项系数进行分类讨论。假设其是偶数，那么可以把$Q()$分解为$Q(x_1,...x_r)=2x_1R(x_2,...x_r)+S(x_2,...x_r)$。容易知道，当中$S()$仍然满足之前$P()$的要求，而$R(x_2,...x_r)$是一个次数为 1 的多项式
 
 $$
 \begin{aligned}
-\sum i^{Q(x_1,...x_r)}&=\sum i^{2x_1R+S+\alpha_1x^2_1}\\\
-&=\sum_{x_2,...x_r}i^S\sum_{x_1\in\{0,1\}}i^{2x_1R+\alpha_1x_1^2} \\\
-&=(1+(-1)^{R}\cdot i^{\alpha_1})\sum_{x_2,...x_r}i^S\\\
+\sum i^{Q(x_1,...x_r)}&=\sum i^{2x_1R+S}\\\ 
+&=\sum_{x_2,...x_r}i^S\sum_{x_1\in\{0,1\}}i^{2x_1R}\\\
+&=(1+(-1)^{R})\sum_{x_2,...x_r}i^S
 \end{aligned}
 $$
 
-类似的，如果$x_1$的一次项系数是奇数，分解$Q(x_1,...x_r)=2x_1R(x_2,...x_r)+S(x_2,...x_r)+\alpha_1x^2_1+x_1$（注意所有的交错二次项的系数均是偶数，因此只有可能留下$x_1$单独的一次项）。此时有
+类似的，如果$x_1$的一次项系数是奇数，分解$Q(x_1,...x_r)=2x_1R(x_2,...x_r)+S(x_2,...x_r)+x_1$（注意所有的交错二次项的系数均是偶数，因此只有可能留下$x_1$单独的一次项）。此时有
 
 $$
-\sum i^{Q(x_1,...x_r)}=(1+(-1)^R\cdot i^{\alpha_1+1})\sum_{x_2,...x_r}i^S
+\sum i^{Q(x_1,...x_r)}=(1+(-1)^R\cdot i)\sum_{x_2,...x_r}i^S
 $$
 
-考虑表达式之前的常数项，有
+考虑表达式之前的常数项，（不失一般性的）有
 
 - $1+(-1)^R\cdot 1$
   - $R=0\implies 2,R=1\implies 0$
@@ -830,6 +832,8 @@ $$
 
 1. 对于示性函数$\mathcal{X}\_{R=0},\mathcal{X}_{R=1}$ ，可以在选出一个不自由的自变量 $x_i$ 由其他 $x_j$ 来表示，这样再次可以类似开始的消除不自由变量的递降
 2. 由于$S()$满足$P()$的条件，$R()$次数为 1，和二次项无关，因此$T(x_2,...x_r)=S()\pm R()$仍然满足$P()$的条件。此时$F$具有类似$\sum i^{T(x_2,...x_r)}$的形式，可以类似之前提出$x_1$的方法继续提出其他自变量
+
+显然的这个过程（高斯消元解矩阵，多项式提取公共项等）可以在多项式时间内实现，$\mathcal{A}$确为一个易解类。
 
 > 这一小结参考论文[The complexity of complex weighted Boolean #CSP](https://www.sciencedirect.com/science/article/pii/S0022000013001414)
 
