caaqa ch3 begin

--- a/content/post/2023-03-23-caaqa.md
+++ b/content/post/2023-03-23-caaqa.md
@@ -1,27 +1,29 @@
 ---
-title: "笔记：Computer Architecture A Quantatative Approach（更新到第2章）"
+title: "笔记：Computer Architecture A Quantatative Approach（更新到第2/A章）"
 date: 2023-03-23T21:00:00+08:00
-draft: true
+draft: false
 tags: ["教程", "读书笔记"]
 isCJKLanguage: true
 ---
 
 - [Computer architecture: a quantitative approach](#computer-architecture-a-quantitative-approach)
-    - [ch 1 Fundamentals](#ch-1-fundamentals)
-    - [ch 2/B Memory Hierarchy Design](#ch-2b-memory-hierarchy-design)
-        - [基础知识](#基础知识)
-        - [cache 性能优化](#cache-性能优化)
-        - [虚拟存储](#虚拟存储)
-        - [virtual machine](#virtual-machine)
-        - [Fallacy](#fallacy)
-        - [Pitfall](#pitfall)
-    - [ch 3/C Instruction-Level Parallelism and Its Exploitation](#ch-3c-instruction-level-parallelism-and-its-exploitation)
-    - [ch A Instruction Set Principles](#ch-a-instruction-set-principles)
-        - [ISA 特性](#isa-特性)
-        - [编译器优化](#编译器优化)
-        - [ISA 统计和对应的 RISC-V 设计](#isa-统计和对应的-risc-v-设计)
-        - [Fallacy](#fallacy-1)
-        - [Pitfall](#pitfall-1)
+   - [ch 1 Fundamentals](#ch-1-fundamentals)
+   - [ch 2/B Memory Hierarchy Design](#ch-2b-memory-hierarchy-design)
+      - [基础知识](#基础知识)
+      - [cache 性能优化](#cache-性能优化)
+      - [虚拟存储](#虚拟存储)
+      - [virtual machine](#virtual-machine)
+      - [Fallacy](#fallacy)
+      - [Pitfall](#pitfall)
+   - [ch 3/C Instruction-Level Parallelism and Its Exploitation](#ch-3c-instruction-level-parallelism-and-its-exploitation)
+      - [5 级流水](#5-级流水)
+      - [中断](#中断)
+   - [ch A Instruction Set Principles](#ch-a-instruction-set-principles)
+      - [ISA 特性](#isa-特性)
+      - [编译器优化](#编译器优化)
+      - [ISA 统计和对应的 RISC-V 设计](#isa-统计和对应的-risc-v-设计)
+      - [Fallacy](#fallacy-1)
+      - [Pitfall](#pitfall-1)
 
 
 # Computer architecture: a quantitative approach
@@ -207,6 +209,53 @@ ISA 设计最好考虑虚拟机，**virtualizable**。保证特权指令在裸 o
    - eg，80x86 的`POPF`指令，在 user mode 下不改变`IE`；在 system mode 下改变。但`POPF`不是特权级指令，vmm 无法 trap 来保证虚拟化
 
 ## ch 3/C Instruction-Level Parallelism and Its Exploitation
+
+### 5 级流水
+
+| 全称                                    | 简称 | 效果                                                                                                                                                                    | 伪代码                                                                                             |
+| --------------------------------------- | ---- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------- |
+| instruction fetch cycle                 | IF   | 按照`pc`取指令，并`pc+=4`                                                                                                                                               | `IR<-Mem[PC],NPC<-PC+4`                                                                            |
+| instruction decode/register fetch cycle | ID   | 指令译码，符号拓展偏移值，预测`pc`跳转地址，读寄存器（RISCV 的寄存器和立即数位置固定，可以在不在意功耗场合默认读取）                                                    | `A<-Regs[rs1],B<-Regs[rs2], Imm<-sign-extended immediate field of IR;`                             |
+| execution/effective address cycle       | EX   | 1. 内存访问：ALU 计算基址+偏移 2. 寄存器-寄存器 ALU 3. 寄存器-立即数 ALU 4. 条件跳转：判断是否跳转。 对于 load-store 的 ISA（如 RISCV）执行和计算地址可以合并为一个周期 | `ALUOutput<- A + Imm;ALUOutput<-A func B;ALUOutput<-A op Imm;ALUOutput<-NPC+(Imm<<2),Cond<-(A?=B)` |
+| memory access                           | MEM  | 访存                                                                                                                                                                    | `LMD<-Mem[ALUOutput] or Mem[ALUOutput]<-B;if(Cond)PC<-ALUOutput else PC<-NPC`                      |
+| write-back cycle                        | WB   | 访存/ALU 运算结果写回寄存器文件                                                                                                                                         | `Regs[rd]<-ALUOutput;Regs[rd]<-LMD`                                                                |
+
+有一些注意事项
+
+1. 分开 Icache 和 Dcache 保证一个 cycle 内取指和访存指令的访存不冲突
+2. 对于流水的 CPU，访存频率更高，要求更高的内存带宽
+3. 寄存器文件在 ID 时候需要 2 个读端口，WB 时候 1 个写端口
+4. 中间结果需要 pipeline registers 缓存下来，`IF/ID,ID/EX,EX/MEM,MEM/WB`
+5. 流水线的单一指令延迟会增加
+   1. 最慢的阶段限制整体时钟频率
+   2. pipeline register 读写和传播时间
+
+流水线会遭遇 hazard 使得性能不如理论值
+
+1. structural hazard：功能部件不能满足同时访问
+2. data hazard：数据依赖（按照正确执行应该保持的顺序来命名）
+   1. Read After Write：RAW，真相关
+   2. Write After Read：WAR，只有乱序时候出现
+   3. Write After Write：WAW，只有乱序时候出现
+3. control hazard：跳转和其他改变`pc`的指令
+
+### 中断
+
+| Exception Type                                  | Synchronous（和具体代码、数据有关） vs Asynchronous | User Request vs Coerced | User Maskable vs Nonmaskable | within（指令本身引发，需要重启指令） vs between Instructions | Resume vs Terminate |
+| ----------------------------------------------- | --------------------------- | ----------------------- | ---------------------------- | ------------------------------ | ------------------- |
+| I/O device request                              | Asynchronous                | Coerced                 | Nonmaskable                  | Between                        | Resume              |
+| Invoke operating system                         | Synchronous                 | User request            | Nonmaskable                  | Between                        | Resume              |
+| Tracing instruction execution                   | Synchronous                 | User request            | User maskable                | Between                        | Resume              |
+| Breakpoint                                      | Synchronous                 | User request            | User maskable                | Between                        | Resume              |
+| Integer arithmetic overflow                     | Synchronous                 | Coerced                 | User maskable                | Within                         | Resume              |
+| Floating-point arithmetic overflow or underflow | Synchronous                 | Coerced                 | User maskable                | Within                         | Resume              |
+| Page fault                                      | Synchronous                 | Coerced                 | Nonmaskable                  | Within                         | Resume              |
+| Misaligned memory accesses                      | Synchronous                 | Coerced                 | User maskable                | Within                         | Resume              |
+| Memory protection violations                    | Synchronous                 | Coerced                 | Nonmaskable                  | Within                         | Resume              |
+| Using undefined instructions                    | Synchronous                 | Coerced                 | Nonmaskable                  | Within                         | Terminate           |
+| Hardware malfunctions                           | Asynchronous                | Coerced                 | Nonmaskable                  | Within                         | Terminate           |
+| Power failure                                   | Asynchronous                | Coerced                 | Nonmaskable                  | Within                         | Terminate           |
+
 
 ## ch A Instruction Set Principles
 
