--- a/content/post/2023-02-27-adalg.md
+++ b/content/post/2023-02-27-adalg.md
@@ -233,7 +233,7 @@ fn main() {
         &\\{x\in l \iff A(x,r)=1\\}
         \end{aligned}
     $$
-- Randomized Poly 单边出错，假阳性，时间被多项式限制
+- Randomized Poly 单边出错，假阴性，时间被多项式限制
   - $$
         \begin{aligned}
         l\in \mathcal{RP} \iff&\exists deterministic\ alg\ A\in \mathcal{P},random\ input\ r,\\\
@@ -241,7 +241,7 @@ fn main() {
         &x\notin l \rightarrow Pr(A(x,r)=0)=1 \\}
         \end{aligned}
     $$
-- Co-RP 单边出错，假阴性
+- Co-RP 单边出错，假阳性
   - $$
         \begin{aligned}
            l\in \mathcal{Co-RP} \iff&\exists deterministic\ alg\ A\in \mathcal{P},random\ input\ r,\\\
@@ -615,11 +615,11 @@ $$p,a\star\implies \\{a\star ^1,a\star^2 ... a\star ^{p-1}\\}\pmod p=\\{1,2,3...
 
 ### 图完美匹配
 
-对于二部图$G(U,V,E)$，对于其邻接矩阵表示$M$，不存在完美匹配的充分条件为$\det(M)=0$
+对于二部图$G(U,V,E)$，对于其邻接矩阵表示$M$，不存在完美匹配的必要条件为$\det(M)=0$
 
 $$\det(M)=\sum_{\pi\in S_n}(-1)^{sign(\pi)}\prod^n_{j=1}m_{j,z(j)}$$
 
-不是必要条件，因为比如完全的二部图的邻接矩阵，每行每列全为 1，会导致抵消而等于 0。引入$O(n^2)$个变量，保证$\det(M)$行列之间不相消
+不是充分条件，因为比如完全的二部图的邻接矩阵，每行每列全为 1，会导致抵消而等于 0。引入$O(n^2)$个变量，保证$\det(M)$行列之间不相消
 
 $$
 m_{ij}=\left\\{
@@ -995,7 +995,7 @@ eg，对于 [SAT 问题](#sat) ，$\exists \{x_1,...x_n\}\to \{0,1\},\bigwedge c
 F1-e-F2
 ```
 
-$e\in\\{0,1\\},F_1(0)=1,F_1(0)=3,F_2(0)=2,F_2(1)=5$，网络值是 $1\times 2+3\times 5=17$
+$e\in\\{0,1\\},F_1(0)=1,F_1(1)=3,F_2(0)=2,F_2(1)=5$，网络值是 $1\times 2+3\times 5=17$
 
 eg，3-regular 图（顶点度数均为 3）的 3 染色问题，可以用张量网络和转变为计数问题
 
